--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <h1>My First Page</h1>
 <p>This is my awesome first page. What do you think of it?</p>
 
+<nav>
+<a href="resume.html/" title="back to Resume">My Resume</a>
+</nav>
 
 
 </html>
