--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <p>This is my awesome first page. What do you think of it?</p>
 
 <nav>
-<a href="resume.html/" title="back to Resume">My Resume</a>
-<a href="articles.html/" title="back to Articles">My Articles</a>
-<a href="contact.html/" title="back to Contact">Contact Me</a>
-<a href="portfolio.html/" title="back to Portfolio">My Portfolio</a>
+<a href="resume.html" title="back to Resume">My Resume</a>
+<a href="articles.html" title="back to Articles">My Articles</a>
+<a href="contact.html" title="back to Contact">Contact Me</a>
+<a href="portfolio.html" title="back to Portfolio">My Portfolio</a>
 </nav>
 
 
