--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,10 @@
 </body>
 
 <nav>
-<a href="resume.html/" title="back to Resume">My Resume</a>
-<a href="articles.html/" title="back to Articles">My Articles</a>
-<a href="contact.html/" title="back to Contact">Contact Me</a>
-<a href="index.html/" title="back to Index">My Home Page</a>
+<a href="resume.html" title="back to Resume">My Resume</a>
+<a href="articles.html" title="back to Articles">My Articles</a>
+<a href="contact.html" title="back to Contact">Contact Me</a>
+<a href="index.html" title="back to Index">My Home Page</a>
 </nav>
 
 </html>
