--- a/resume.html
+++ b/resume.html
@@ -9,4 +9,10 @@
 <h1>My Resume</h1>
 </body>
 
+<nav>
+<a href="portfolio.html" title="back to Portfolio">My Portfolio</a>
+<a href="articles.html" title="back to Articles">My Articles</a>
+<a href="contact.html" title="back to Contact">Contact Me</a>
+<a href="index.html" title="back to Index">My Home Page</a>
+</nav>
 </html>
