--- a/contact.html
+++ b/contact.html
@@ -9,4 +9,11 @@
 <h1>Contact Me</h1>
 </body>
 
+<nav>
+<a href="resume.html" title="back to Resume">My Resume</a>
+<a href="articles.html" title="back to Articles">My Articles</a>
+<a href="portfolio.html" title="back to Portfolio">My Portfolio</a>
+<a href="index.html" title="back to Index">My Home Page</a>
+</nav>
+
 </html>
