--- a/articles.html
+++ b/articles.html
@@ -9,4 +9,11 @@
 <h1>My Articles</h1>
 </body>
 
+<nav>
+<a href="resume.html" title="back to Resume">My Resume</a>
+<a href="portfolio.html" title="back to Portfolio">My Portfolio</a>
+<a href="contact.html" title="back to Contact">Contact Me</a>
+<a href="index.html" title="back to Index">My Home Page</a>
+</nav>
+
 </html>
