--- a/articles.html
+++ b/articles.html
@@ -8,6 +8,8 @@
 <body>
 <h1>My Articles</h1>
 </body>
+<h1>My Articles</h1>
+<p>Here is a list of my published articles.</p>
 
 <nav>
 <a href="resume.html" title="back to Resume">My Resume</a>
