--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,10 @@
 
 <body>
 <h1>My Portfolio</h1>
+<p>Here is a portfolio of some of my designs. Enjoy.</p>
 </body>
+
+
 
 <nav>
 <a href="resume.html" title="back to Resume">My Resume</a>
