--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 
 <!--this is the head info for the browser -->
 <head>
-<title>My First Page</title>
+<title>Home Pagee</title>
 </head>
 <body>
   
   
 <!-- this is the stuff the user will see -->
 </body>
-<h1>My First Page</h1>
-<p>This is my awesome first page. What do you think of it?</p>
+<h1>About Me</h1>
+<p>My name is Andrew Grossman...</p>
 
 <nav>
 <a href="resume.html" title="back to Resume">My Resume</a>
