--- a/articles.html
+++ b/articles.html
@@ -14,7 +14,7 @@
 <a href="resume.html" title="back to Resume">My Resume</a>
 <a href="portfolio.html" title="back to Portfolio">My Portfolio</a>
 <a href="contact.html" title="back to Contact">Contact Me</a>
-<a href="index.html" title="back to Index">My Home Page</a>
+<a href="index.html" title="back to Index">Main Menu</a>
 </nav>
 
 </html>
