--- a/resume.html
+++ b/resume.html
@@ -11,9 +11,9 @@
 </body>
 
 <nav>
+<a href="index.html" title="back to Index">Main Menu*</a>
 <a href="portfolio.html" title="back to Portfolio">My Portfolio</a>
 <a href="articles.html" title="back to Articles">My Articles</a>
 <a href="contact.html" title="back to Contact">Contact Me</a>
-<a href="index.html" title="back to Index">My Home Page</a>
 </nav>
 </html>
