--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 </body>
 
 <nav>
-<a href="index.html" title="back to Index">Main Menu*</a>
+<a href="index.html" title="back to Index">Main Menu</a>
 <a href="portfolio.html" title="back to Portfolio">My Portfolio</a>
 <a href="articles.html" title="back to Articles">My Articles</a>
 <a href="contact.html" title="back to Contact">Contact Me</a>
