--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <h1>About Me</h1>
 <p>My name is Andrew Grossman...</p>
 
-<nav>
+<h2>Links</h2>
 <a href="resume.html" title="back to Resume">My Resume</a>
 <a href="articles.html" title="back to Articles">My Articles</a>
 <a href="portfolio.html" title="back to Portfolio">My Portfolio</a>
 <a href="contact.html" title="back to Contact">Contact Me</a>
-</nav>
+
 
 
 </html>
