--- a/articles.html
+++ b/articles.html
@@ -10,11 +10,11 @@
 <p>Here is a list of my published articles.</p>
 </body>
 
-<nav>
+<h2>Links</h2>
 <a href="index.html" title="back to Index">Main Menu</a>
 <a href="resume.html" title="back to Resume">My Resume</a>
 <a href="portfolio.html" title="back to Portfolio">My Portfolio</a>
 <a href="contact.html" title="back to Contact">Contact Me</a>
-</nav>
+<h2>Links</h2>
 
 </html>
