--- a/portfolio.html
+++ b/portfolio.html
@@ -10,13 +10,14 @@
 <p>Here is a portfolio of some of my designs. Enjoy.</p>
 </body>
 
-
-
-<nav>
+<h2>Links</h2>
 <a href="index.html" title="back to Index">Main Menu</a>
+<br>
 <a href="resume.html" title="back to Resume">My Resume</a>
+<br>
 <a href="articles.html" title="back to Articles">My Articles</a>
+<br>
 <a href="contact.html" title="back to Contact">Contact Me</a>
-</nav>
+
 
 </html>
