--- a/resume.html
+++ b/resume.html
@@ -10,10 +10,13 @@
 <p>Here is my most updated resume.</p>
 </body>
 
-<nav>
+<h2>Links</h2>
 <a href="index.html" title="back to Index">Main Menu</a>
+<br>
 <a href="portfolio.html" title="back to Portfolio">My Portfolio</a>
+<br>
 <a href="articles.html" title="back to Articles">My Articles</a>
+<br>
 <a href="contact.html" title="back to Contact">Contact Me</a>
 </nav>
 </html>
