--- a/portfolio.html
+++ b/portfolio.html
@@ -11,13 +11,13 @@
 </body>
 
 <h2>Links</h2>
-<a href="index.html" title="back to Index">Main Menu</a>
+<a href="index.html" title="Back to Main Menu">Main Menu</a>
 <br>
-<a href="resume.html" title="back to Resume">My Resume</a>
+<a href="resume.html" title="Back to My Resume">My Resume</a>
 <br>
-<a href="articles.html" title="back to Articles">My Articles</a>
+<a href="articles.html" title="Back to My Articles">My Articles</a>
 <br>
-<a href="contact.html" title="back to Contact">Contact Me</a>
+<a href="contact.html" title="Back to Contact Me">Contact Me</a>
 
 
 </html>
