--- a/resume.html
+++ b/resume.html
@@ -11,12 +11,12 @@
 </body>
 
 <h2>Links</h2>
-<a href="index.html" title="back to Index">Main Menu</a>
+<a href="index.html" title="Back to Main Menu">Main Menu</a>
 <br>
-<a href="portfolio.html" title="back to Portfolio">My Portfolio</a>
+<a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a>
 <br>
-<a href="articles.html" title="back to Articles">My Articles</a>
+<a href="articles.html" title="Back to My Articles">My Articles</a>
 <br>
-<a href="contact.html" title="back to Contact">Contact Me</a>
+<a href="contact.html" title="Back to Contact Me">Contact Me</a>
 </nav>
 </html>
