--- a/articles.html
+++ b/articles.html
@@ -13,11 +13,11 @@
 <h2>Links</h2>
 <a href="index.html" title="Back to Main Menu">Main Menu</a>
 <br>
-<a href="resume.html" title="Back to Resume">My Resume</a>
+<a href="resume.html" title="Back to My Resume">My Resume</a>
 <br>
-<a href="portfolio.html" title="Back to Portfolio">My Portfolio</a>
+<a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a>
 <br>
-<a href="contact.html" title="Back to Contact">Contact Me</a>
+<a href="contact.html" title="Back to Contact Me">Contact Me</a>
 
 
 </html>
