--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,10 @@
 <h2>Links</h2>
 <a href="index.html" title="Back to Main Menu">Main Menu</a>
 <br>
-<a href="resume.html" title="Back to Resume">My Resume</a>
+<a href="resume.html" title="Back to My Resume">My Resume</a>
 <br>
-<a href="articles.html" title="Back to Articles">My Articles</a>
+<a href="articles.html" title="Back to My Articles">My Articles</a>
 <br>
-<a href="portfolio.html" title="Back to Portfolio">My Portfolio</a>
+<a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a>
 
 </html>
