--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!--this is the head info for the browser -->
 <head>
 <title>Main Menu</title>
+<!--this is where we link to css or style sheet -->
 </head>
 <body>
   
