--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--this is the head info for the browser -->
 <head>
 <title>Main Menu</title>
-<link rel=stylesheet" href="/styles/mystyle.css">
+<link rel="stylesheet" href="/styles/mystyle.css">
 <!--this is where we link to css or style sheet -->
 </head>
 <body>
