--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 
 <!--this is the head info for the browser -->
+<div id="wrapper">
 <head>
 <title>Main Menu</title>
 <link rel="stylesheet" href="./styles/mystyle.css">
