--- a/articles.html
+++ b/articles.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html> 
 
+<div id="wrapper">
 <head>
 <title>My Articles</title>
 <link rel="stylesheet" href="./styles/mystyle.css">
