--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html> 
 
+<div id="wrapper">
 <head>
 <title>Contact Me</title>
 <link rel="stylesheet" href="./styles/mystyle.css">
