--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html> 
 
+<div id="wrapper">
 <head>
 <title>My Resume</title>
 <link rel="stylesheet" href="./styles/mystyle.css">
