--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
 <ul>
 <h2>Links</h2>
-<a href="resume.html" class="linkborder" title="Go to My Resume">My Resume</a>
+<a href="resume.html" title="Go to My Resume">My Resume</a>
 <br> <br>
-<a href="articles.html" class="linkborder" title="Go to My Articles">My Articles</a>
+<a href="articles.html" title="Go to My Articles">My Articles</a>
 <br> <br>
-<a href="portfolio.html" class="linkborder" title="Go to My Portfolio">My Portfolio</a>
+<a href="portfolio.html" title="Go to My Portfolio">My Portfolio</a>
 <br> <br>
-<a href="contact.html" class="linkborder" title="Go to Contact Me">Contact Me</a>
+<a href="contact.html" title="Go to Contact Me">Contact Me</a>
 </ul>
 
 
