--- a/portfolio.html
+++ b/portfolio.html
@@ -23,4 +23,12 @@
 <a href="contact.html" title="Back to Contact Me">Contact Me</a>
 </ul>
 
+<div>
+<imgsrc="https://drive.google.com/uc?id=_____" alt "Photo One" title "Photo One"
+<imgsrc="https://drive.google.com/uc?id=_____" alt "Photo Two" title "Photo Two"
+<imgsrc="https://drive.google.com/uc?id=_____" alt "Photo Three" title "Photo Three"
+<imgsrc="https://drive.google.com/uc?id=_____" alt "Photo Four" title "Photo Four"
+  
+</div>
+
 </html>
