--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
 </ul>
 
 <div>
-<imgsrc="https://drive.google.com/uc?id=/0B6HcEl1I72V1eGw5cUQycTMtUDg" alt "Photo One" title "Photo One"
-<imgsrc="https://drive.google.com/uc?id=0B6HcEl1I72V1YVQxNHBVUEF0bkE" alt "Photo Two" title "Photo Two"
-<imgsrc="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA" alt "Photo Three" title "Photo Three"
-<imgsrc="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" alt "Photo Four" title "Photo Four"
+<imgsrc="https://drive.google.com/uc?id=/0B6HcEl1I72V1eGw5cUQycTMtUDg" alt "Photo One" title "Photo One"</imgsrc>
+<imgsrc="https://drive.google.com/uc?id=0B6HcEl1I72V1YVQxNHBVUEF0bkE" alt "Photo Two" title "Photo Two"</imgsrc>
+<imgsrc="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA" alt "Photo Three" title "Photo Three"</imgsrc>
+<imgsrc="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" alt "Photo Four" title "Photo Four"</imgsrc>
   
 </div>
 
