--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,20 @@
 <!doctype html>
 <html> 
 
-<div id="wrapper">
+
 <head>
 <title>My Portfolio</title>
 <link rel="stylesheet" href="./styles/mystyle.css">
 </head>
 
 <body>
+<div id="wrapper">
 <h1>My Portfolio</h1>
 <p>Here is a portfolio of some of my designs. Enjoy.</p>
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eGw5cUQycTMtUDg" alt "Photo One" title "Photo One"</imgsrc>
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1YVQxNHBVUEF0bkE" alt "Photo Two" title "Photo Two"</imgsrc>
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA" alt "Photo Three" title "Photo Three"</imgsrc>
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" alt "Photo Four" title "Photo Four"</imgsrc>
-</body>
 
 <ul>
 <h2>Links</h2>
@@ -26,6 +26,8 @@
 <br> <br>
 <a href="contact.html" title="Back to Contact Me">Contact Me</a>
 </ul>
+</div>
+</body>
 
 
 </html>
