--- a/portfolio.html
+++ b/portfolio.html
@@ -15,16 +15,13 @@
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1YVQxNHBVUEF0bkE" alt "Photo Two" title "Photo Two"</imgsrc>
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA" alt "Photo Three" title "Photo Three"</imgsrc>
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" alt "Photo Four" title "Photo Four"</imgsrc>
+<h2>Links</h2>
 
 <ul>
-<h2>Links</h2>
-<a href="index.html" title="Back to Main Menu">Main Menu</a>
-<br> <br>
-<a href="resume.html" title="Back to My Resume">My Resume</a>
-<br> <br>
-<a href="articles.html" title="Back to My Articles">My Articles</a>
-<br> <br>
-<a href="contact.html" title="Back to Contact Me">Contact Me</a>
+<li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
+<li><a href="resume.html" title="Back to My Resume">My Resume</a></li>
+<li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
+<li><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
 </ul>
 </div>
 </body>
