--- a/index.html
+++ b/index.html
@@ -3,30 +3,29 @@
 
 
 <!--this is the head info for the browser -->
-<div id="wrapper">
+
 <head>
 <title>Main Menu</title>
 <link rel="stylesheet" href="./styles/mystyle.css">
 <!--this is where we link to css or style sheet -->
 </head>
 <body>
-  
+<div id="wrapper">
   
 <!-- this is the stuff the user will see -->
-</body>
+
 <h1>About Me</h1>
 <p>My name is Andrew Grossman...</p>
+<h2>Links</h2>
 
 <ul>
-<h2>Links</h2>
-<a href="resume.html" title="Go to My Resume">My Resume</a>
-<br> <br>
-<a href="articles.html" title="Go to My Articles">My Articles</a>
-<br> <br>
-<a href="portfolio.html" title="Go to My Portfolio">My Portfolio</a>
-<br> <br>
-<a href="contact.html" title="Go to Contact Me">Contact Me</a>
+<li><a href="resume.html" title="Go to My Resume">My Resume</a></li>
+<li><a href="articles.html" title="Go to My Articles">My Articles</a></li>
+<li><a href="portfolio.html" title="Go to My Portfolio">My Portfolio</a></li>
+<li><a href="contact.html" title="Go to Contact Me">Contact Me</a></li>
 </ul>
+</div>
+</body>
 
 
 </html>
