--- a/articles.html
+++ b/articles.html
@@ -1,26 +1,25 @@
 <!doctype html>
 <html> 
 
-<div id="wrapper">
+
 <head>
 <title>My Articles</title>
 <link rel="stylesheet" href="./styles/mystyle.css">
 </head>
 
 <body>
+<div id="wrapper">
 <h1>My Articles</h1>
 <p>Here is a list of my published articles.</p>
-</body>
+
+<h2>Links</h2>
 
 <ul>
-<h2>Links</h2>
-<a href="index.html" title="Back to Main Menu">Main Menu</a>
-<br> <br>
-<a href="resume.html" title="Back to My Resume">My Resume</a>
-<br> <br>
-<a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a>
-<br> <br>
-<a href="contact.html" title="Back to Contact Me">Contact Me</a>
+<li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
+<li><a href="resume.html" title="Back to My Resume">My Resume</a></li>
+<li><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
+<li><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
 </ul>
-
+</div>
+</body>
 </html>
