--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,28 @@
 <!doctype html>
 <html> 
 
-<div id="wrapper">
 <head>
 <title>Contact Me</title>
 <link rel="stylesheet" href="./styles/mystyle.css">
 </head>
 
 <body>
+<div id="wrapper">
 <h1>Contact Me</h1>
 <p>Thank you for checking out my website. Please contact me to learn more.</p>
-</body>
 
-<ul>
 <h2>Links</h2>
-<a href="index.html" title="Back to Main Menu">Main Menu</a>
-<br> <br>
-<a href="resume.html" title="Back to My Resume">My Resume</a>
-<br> <br>
-<a href="articles.html" title="Back to My Articles">My Articles</a>
-<br> <br>
-<a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a>
+<ul>
+
+<li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
+
+<li><a href="resume.html" title="Back to My Resume">My Resume</a></li>
+
+<li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
+
+<li><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
 </ul>
 
+</div>
+</body>
 </html>
