--- a/resume.html
+++ b/resume.html
@@ -1,26 +1,29 @@
 <!doctype html>
 <html> 
 
-<div id="wrapper">
+
 <head>
 <title>My Resume</title>
 <link rel="stylesheet" href="./styles/mystyle.css">
 </head>
 
 <body>
+<div id="wrapper">
 <h1>My Resume</h1>
 <p>Here is my most updated resume.</p>
-</body>
+<h2>Links</h2>
 
 <ul>
-<h2>Links</h2>
-<a href="index.html" title="Back to Main Menu">Main Menu</a>
-<br> <br>
-<a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a>
-<br> <br>
-<a href="articles.html" title="Back to My Articles">My Articles</a>
-<br> <br>
-<a href="contact.html" title="Back to Contact Me">Contact Me</a>
+
+<li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
+
+<li><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
+
+<li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
+
+<li><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
 </ul>
+</div>
+</body>
 
 </html>
