--- a/portfolio.html
+++ b/portfolio.html
@@ -11,10 +11,10 @@
 <div id="wrapper">
 <h1>My Portfolio</h1>
 <p>Here is a portfolio of some of my designs. Enjoy.</p>
-<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eGw5cUQycTMtUDg" alt "Photo One" title "Photo One"</imgsrc>
-<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1YVQxNHBVUEF0bkE" alt "Photo Two" title "Photo Two"</imgsrc>
-<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA" alt "Photo Three" title "Photo Three"</imgsrc>
-<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" alt "Photo Four" title "Photo Four"</imgsrc>
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eGw5cUQycTMtUDg" alt="Photo One" title "Photo One"</imgsrc>
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1YVQxNHBVUEF0bkE" alt="Photo Two" title "Photo Two"</imgsrc>
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA" alt="Photo Three" title "Photo Three"</imgsrc>
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" alt="Photo Four" title "Photo Four"</imgsrc>
 
 <!--   Always start with <img src="https://drive.google.com/uc?id=    "  -->
 
