--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 <div id="wrapper">
 <h1>Contact Me</h1>
 <p>Thank you for checking out my website. Please contact me to learn more.</p>
+<p><a=href="mailto://grossma6@tcnj.edu"</p>
 
 <h2>Links</h2>
 <ul>
