--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eGw5cUQycTMtUDg" alt="Photo One" title="Photo One">
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1YVQxNHBVUEF0bkE" alt="Photo Two" title="Photo Two">
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA" alt="Photo Three" title="Photo Three">
-<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" alt="Photo Four" title"Photo Four">
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" alt="Photo Four" title="Photo Four">
 
 <!--   Always start with <img src="https://drive.google.com/uc?id=    "  -->
 
