--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!--this is where we link to css or style sheet -->
 </head>
 <body>
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1Z3pqc2dwUHRXbVU"
 <div id="wrapper">
   
 <!-- this is the stuff the user will see -->
