--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   
 <!-- this is the stuff the user will see -->
 
-<h1>About Me</h1>
-<p>My name is Andrew Grossman...</p>
+<h1>Hello, my name is Andrew Grossman and welcome to my personal website. 
+Please scroll around this page to learn more.</h1>
+
 <h2>Links</h2>
 
 <ul>
