--- a/index.html
+++ b/index.html
@@ -18,14 +18,12 @@
 <h1>Hello, my name is Andrew Grossman and welcome to my personal website. 
 Please scroll around this page to learn more.</h1>
 
-<h2>Links</h2>
-
-<ul>
-<li><a href="resume.html" title="Go to My Resume">My Resume</a></li>
-<li><a href="articles.html" title="Go to My Articles">My Articles</a></li>
-<li><a href="portfolio.html" title="Go to My Portfolio">My Portfolio</a></li>
-<li><a href="contact.html" title="Go to Contact Me">Contact Me</a></li>
-</ul>
+<a class="portfolio" href="portfolio.html" title="Go to My Portfolio">My Portfolio</a>
+<a class="resume" href="resume.html" title="Go to My Resume">My Resume</a>
+<a class="contact" href="contact.html" title="Go to Contact Me">Contact Me</a>
+<a class="articles" href="articles.html" title="Go to My Articles">My Articles</a>
+  
+  
 </div>
 </body>
 
