--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   
 <!-- this is the stuff the user will see -->
 
-<h1>Hello, my name is Andrew Grossman and welcome to my personal website. 
-Please scroll around this page to learn more.</h1>
+<h1>Hello, welcome to Andrew Grossman's personal website.</h1>
 
 <a class="portfolio" href="portfolio.html" title="Go to My Portfolio">My Portfolio</a>
 <a class="resume" href="resume.html" title="Go to My Resume">My Resume</a>
