--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,18 @@
 
 <head>
 <title>Contact Me</title>
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="./styles/mystyle.css">
+<style>
+/* local styles */
+</style>
+
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+<![endif]-->
 </head>
 
 <body>
@@ -16,14 +27,35 @@
 <ul>
 
 <li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
-
 <li><a href="resume.html" title="Back to My Resume">My Resume</a></li>
-
 <li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
-
 <li><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
 </ul>
 
+<form action="mailto:grosma6@apps.tcnj.edu" method="post" enctype="text/plain">
+<div class="form-group">
+<label>From</label>
+<input class="form-control" type="text" name="from" placeholder="Enter email">
 </div>
+<div class="form-group">
+<label>Subject</label>
+<input class="form-control" type="text" name="subject" placeholder="Enter Subject">
+</div>
+<div class="form-group">
+<label>Message</label>
+<textarea class="form-control" name="message"></textarea>
+</div>
+<input type="submit" class="btn btn-default" name="submit" value="Submit">
+</form>
+
+
+
+
+
+
+</div>
+<script src="https://code.jquery.com/jquery.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 </body>
 </html>
