--- a/contact.html
+++ b/contact.html
@@ -50,12 +50,35 @@
 
 
 
-
-
-
 </div>
 <script src="https://code.jquery.com/jquery.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script>
+
+/* jsonp form to email function */
+$('form').submit(function() {
+  var url = $(this).attr("action");
+  var params = $(this).serialize();
+  
+  $.getJSON(url + '?' + params + "&callback=?", function(data) {
+   
+switch(data[0].status){
+case 'success':
+$('.message').addClass("text-success").html('Thank you, <strong>' + data[0].from + '</strong>, for sending us feedback!');
+$('form')[0].reset();
+break;
+case 'invalid email':
+$('.message').removeClass("text-success").addClass("text-danger").html('Please provide a valid email address!');
+break;
+case 'failed to send':
+$('.message').removeClass("text-success").addClass("text-danger").html('Failed to send email.');
+break;
+}
+  });
+  return false;
+});
+
+</script>
 </body>
 </html>
