--- a/contact2.html
+++ b/contact2.html
@@ -21,6 +21,22 @@
 <![endif]-->
 </head>
 <body>
+<body>
+<div id="wrapper">
+<h1>Contact Me</h1>
+<p>Thank you for checking out my website. Please contact me to learn more.</p>
+<p><a href="mailto://grossma6@tcnj.edu"> Mail Me</a></p>
+
+<h2>Links</h2>
+<ul>
+
+<li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
+<li><a href="resume.html" title="Back to My Resume">My Resume</a></li>
+<li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
+<li><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
+</ul>
+
+
 <div class="container">
 <div class="row">
 <header class="col-md-12">
