--- a/contact2.html
+++ b/contact2.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Feedback form for My Site">
 <meta name="author" content="grossma6@tcnj.edu">
-
+<link rel="stylesheet" href="https://github.com/grossma6/mywebsite/blob/master/jsonpform2email.php">
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <style>
 /* local styles */
