--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 <li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
 <li><a href="resume.html" title="Back to My Resume">My Resume</a></li>
 <li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
-<li><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
+<li><a href="contact2.html" title="Back to Contact Me">Contact Me</a></li>
 </ul>
 </div>
 </body>
