--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
 
 <li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
 
-<li><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
+<li><a href="contact2.html" title="Back to Contact Me">Contact Me</a></li>
 </ul>
 </div>
 </body>
