--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <a class="portfolio" href="portfolio.html" title="Go to My Portfolio">My Portfolio</a>
 <a class="resume" href="resume.html" title="Go to My Resume">My Resume</a>
-<a class="contact" href="contact2.html" title="Go to Contact Me">Contact Me</a>
+<a class="contact" href="contact.html" title="Go to Contact Me">Contact Me</a>
 <a class="articles" href="articles.html" title="Go to My Articles">My Articles</a>
   
   
