--- a/articles.html
+++ b/articles.html
@@ -1,10 +1,30 @@
 <!doctype html>
-<html> 
 
-
+<html lang="en">
 <head>
+<meta charset="utf-8">
 <title>My Articles</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Feedback form for My Site">
+<meta name="author" content="grossma6@tcnj.edu">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="./styles/mystyle.css">
+<style>
+/* local styles */
+</style>
+
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+<![endif]-->
+
+
+<!--this is the head info for the browser -->
+<!--this is where we link to css or style sheet -->
+
+
 </head>
 
 <body>
@@ -18,8 +38,15 @@
 <li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
 <li><a href="resume.html" title="Back to My Resume">My Resume</a></li>
 <li><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
-<li><a href="contact2.html" title="Back to Contact Me">Contact Me</a></li>
+<li><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
 </ul>
 </div>
+
+<script src="https://code.jquery.com/jquery.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
+
+
 </body>
 </html>
