--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 <label>Message</label>
 <textarea class="form-control" name="message"></textarea>
 </div>
-<input type="submit" class="btn btn-default" name="submit" value="Submit Feedback">
+<input type="submit" class="btn btn-default" name="submit" value="Submit">
 </form>
 
 </article>
