--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 <div class="container">
 <div class="row">
 <header class="col-md-12">
-<h1>Feedback Form</h1>
+<h1>Contact Me</h1>
 </header>
 </div>
 
