--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,11 @@
 <meta name="author" content="grossma6@tcnj.edu">
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="./styles/mystyle.css">
+
 <style>
+<link href="./styles/webwidget_menu_glide.css" rel="stylesheet" type="text/css"></link>
+<script type="text/javascript" src="js/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="js/webwidget_menu_glide.js">
 /* local styles */
 </style>
 
@@ -26,6 +30,23 @@
 </head>
 
 <body>
+
+<div id="webwidget_menu_glide" class="webwidget_menu_glide">
+<div class="webwidget_menu_glide_sprite"></div>
+<ul>
+<li><a href="http://www.htmldrive.net/">Home</a></li>
+
+<li><a href="http://www.htmldrive.net/">News</a></li>
+<li class="current"><a href="http://www.htmldrive.net/">About</a></li>
+<li><a href="http://www.htmldrive.net/">Contact</a></li>
+
+<li><a href="http://www.htmldrive.net/">More...</a></li>
+</ul>
+<div style="clear: both"></div>
+
+</div>
+
+
 <div id="wrapper">
 <h1>My Resume</h1>
 <p>Here is my most updated resume.</p>
