--- a/resume.html
+++ b/resume.html
@@ -68,6 +68,14 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
+
+<script language="javascript" type="text/javascript">
+$(function() {
+$("#webwidget_menu_glide").webwidget_menu_glide({menu_width:"100", menu_height:"30", menu_text_size:"15", menu_text_color:"#CCC", menu_sprite_color:"#666", menu_background_color:"#000", menu_margin:"5", sprite_speed:"normal", container:"webwidget_menu_glide" });
+});
+</script>
+
+
 </body>
 
 </html>
