--- a/resume.html
+++ b/resume.html
@@ -34,13 +34,13 @@
 <div id="webwidget_menu_glide" class="webwidget_menu_glide">
 <div class="webwidget_menu_glide_sprite"></div>
 <ul>
-<li><a href="http://www.htmldrive.net/">Home</a></li>
+<li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
 
-<li><a href="http://www.htmldrive.net/">News</a></li>
-<li class="current"><a href="http://www.htmldrive.net/">About</a></li>
-<li><a href="http://www.htmldrive.net/">Contact</a></li>
+<li><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
 
-<li><a href="http://www.htmldrive.net/">More...</a></li>
+<li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
+
+<li><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
 </ul>
 <div style="clear: both"></div>
 
