--- a/resume.html
+++ b/resume.html
@@ -10,9 +10,7 @@
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="./styles/mystyle.css">
 
-
-<link href="./styles/webwidget_menu_glide.css" rel="stylesheet" type="text/css"></link>
-/* local styles */
+<link href="./styles/webwidget_menu_glide.css" rel="stylesheet" type="text/css">
 
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -69,7 +67,7 @@
 <script type="text/javascript" src="js/webwidget_menu_glide.js">
 <script language="javascript" type="text/javascript">
 $(function() {
-$("#webwidget_menu_glide").webwidget_menu_glide({menu_width:"100", menu_height:"30", menu_text_size:"15", menu_text_color:"#CCC", menu_sprite_color:"#666", menu_background_color:"#000", menu_margin:"5", sprite_speed:"normal", container:"webwidget_menu_glide" });
+    $("#webwidget_menu_glide").webwidget_menu_glide({menu_width:"100", menu_height:"30", menu_text_size:"15", menu_text_color:"#CCC", menu_sprite_color:"#666", menu_background_color:"#000", menu_margin:"5", sprite_speed:"normal", container:"webwidget_menu_glide" });
 });
 </script>
 
