--- a/resume.html
+++ b/resume.html
@@ -46,18 +46,10 @@
 <div id="wrapper">
 <h1>My Resume</h1>
 <p>Here is my most updated resume.</p>
-<h2>Links</h2>
 
-<ul>
 
-<li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
+<!-- enter text for resume -->
 
-<li><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
-
-<li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
-
-<li><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
-</ul>
 </div>
 
 <script src="https://code.jquery.com/jquery.js"></script>
