--- a/resume.html
+++ b/resume.html
@@ -109,6 +109,7 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
 
+<script type="text/javascript" src="js/webwidget_menu_glide.js"></script>
 <script language="javascript" type="text/javascript">
     $(function(){
         $("#webwidget_menu_glide").webwidget_menu_glide({
