--- a/articles.html
+++ b/articles.html
@@ -9,9 +9,9 @@
 <meta name="author" content="grossma6@tcnj.edu">
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="./styles/mystyle.css">
-<style>
-/* local styles */
-</style>
+
+<link href="./styles/webwidget_menu_glide.css" rel="stylesheet" type="text/css">
+
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,23 +28,45 @@
 </head>
 
 <body>
+<div id="webwidget_menu_glide" class="webwidget_menu_glide">
+<div class="webwidget_menu_glide_sprite"></div>
+<ul>
+<li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
+
+<li><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
+
+<li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
+
+<li><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
+
+<li><a href="resume.html" title="Back to My Resume">My Resume</a></li>
+
+</ul>
+<div style="clear: both"></div>
+
 <div id="wrapper">
 <h1>My Articles</h1>
 <p>Here is a list of my published articles.</p>
 
-<h2>Links</h2>
-
-<ul>
-<li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
-<li><a href="resume.html" title="Back to My Resume">My Resume</a></li>
-<li><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
-<li><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
-</ul>
-</div>
 
 <script src="https://code.jquery.com/jquery.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/webwidget_menu_glide.js"></script>
+<script language="javascript" type="text/javascript">
+    $(function(){
+        $("#webwidget_menu_glide").webwidget_menu_glide({
+            menu_width:"100",
+            menu_height:"30",
+            menu_text_size:"15",
+            menu_text_color:"#CCC",
+            menu_sprite_color:"#666",
+            menu_background_color:"#000",
+            menu_margin:"5",
+            sprite_speed:"normal"
+        });
+    });
+</script>
 
 
 
