--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,6 @@
 <meta name="author" content="grossma6@tcnj.edu">
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="./styles/mystyle.css">
-
 <link href="./styles/webwidget_menu_glide.css" rel="stylesheet" type="text/css">
 
 
@@ -47,10 +46,35 @@
 <div id="wrapper">
 <h1>My Portfolio</h1>
 <p>Here is a portfolio of some of my designs. Enjoy.</p>
+
+
+
+
+<div id="bb-bookblock" class="bb-bookblock">
+    <div class="bb-item">
+        <!-- custom content -->
+    </div>
+    <div class="bb-item">
+        <!-- ... -->
+    </div>
+    <div class="bb-item">
+        <!-- ... -->
+    </div>
+    <div class="bb-item">
+        <!-- ... -->
+    </div>
+    <!-- ... -->
+</div>
+
+
+
+
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eGw5cUQycTMtUDg" alt="Photo One" title="Photo One">
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1YVQxNHBVUEF0bkE" alt="Photo Two" title="Photo Two">
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA" alt="Photo Three" title="Photo Three">
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" alt="Photo Four" title="Photo Four">
+
+
 
 <!--   Always start with <img src="https://drive.google.com/uc?id=    "  -->
 
@@ -74,6 +98,13 @@
         });
     });
 </script>
+
+
+$(function() {
+             
+    $( '#bb-bookblock' ).bookblock();
+ 
+});
 
 </body>
 
