--- a/booktest.html
+++ b/booktest.html
@@ -9,11 +9,9 @@
 <meta name="keywords" content="javascript, jquery, plugin, css3, flip, page, 3d, booklet, book, perspective" />
 <meta name="author" content="Codrops" />
 <link rel="shortcut icon" href="../favicon.ico">
-<link rel="stylesheet" type="text/css" href="css/default.css" />
-<link rel="stylesheet" type="text/css" href="css/bookblock.css" />
+<link rel="stylesheet" href="./styles/mystyle.css">
+<link rel="stylesheet" type="text/css" href="styles/bookblock.css" />
 <!-- custom demo style -->
-<link rel="stylesheet" type="text/css" href="css/demo2.css" />
-<link rel="stylesheet" type="text/css" href="css/calendar.css" />
 <script src="js/modernizr.custom.js"></script>
 </head>
 <body>
