--- a/articles.html
+++ b/articles.html
@@ -44,7 +44,7 @@
 
 </ul>
 <div style="clear: both"></div>
-
+</div>
 <div id="wrapper">
 <h1>My Articles</h1>
 <p>Here is a list of my published articles.</p>
