--- a/articles.html
+++ b/articles.html
@@ -35,7 +35,7 @@
 
 <li><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
 
-<li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
+<li class="current"><a href="articles.html" title="Back to My Articles">My Articles</a></li>
 
 <li><a href="resume.html" title="Back to My Resume">My Resume</a></li>
 
