--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 
 <li><a href="resume.html" title="Back to My Resume">My Resume</a></li>
 
-<li><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
+<li class="current"><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
 
 
 </ul>
