--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,7 @@
 
 <li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
 
-<li><a href="resume.html" title="Back to My Resume">My Resume</a></li>
+<li class="current"><a href="resume.html" title="Back to My Resume">My Resume</a></li>
 
 <li><a href="contact.html" title="Back to Contact Me">Contact Me</a></li>
 
