--- a/resume.html
+++ b/resume.html
@@ -23,6 +23,11 @@
 
 <!--this is the head info for the browser -->
 <!--this is where we link to css or style sheet -->
+<style type="text/css">
+body p {
+	text-align: left;
+}
+</style>
 </head>
 
 <body>
