--- a/contact.html
+++ b/contact.html
@@ -40,12 +40,10 @@
 </div>
 <div id="wrapper">
 
-<p>Thank you for checking out my website. Please contact me to learn more.</p>
-
 
 <div class="row">
 <header class="col-md-12">
-<h1>Contact Me</h1>
+<h1>Thank you for checking out my website. Please contact me to learn more.</h1>
 </header>
 </div>
 
