--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 </div>
 <div id="wrapper">
 
-
+<p><b>Thank you for checking out my website. Please contact me to learn more.</b></p>
 <div class="row">
 <header class="col-md-12">
 <h1>Thank you for checking out my website. Please contact me to learn more.</h1>
