--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 <div style="clear: both"></div>
 
 </div>
-<div id="wrapper">
+<div class="container">
 
 <p><b><font size="5">Thank you for checking out my website. Please contact me to learn more.</font></b></p>
 <div class="row">
