--- a/articles.html
+++ b/articles.html
@@ -45,7 +45,7 @@
 </ul>
 <div style="clear: both"></div>
 </div>
-<div id="wrapper">
+<div class="container">
 <h1>My Articles</h1>
 <p>Here is a list of my published articles.</p>
 
