--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 <!--this is where we link to css or style sheet -->
 </head>
 <body>
-<div id = "bg"> 
 
+
+<div id = "bg"> 
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1MmRNRThpWW9kRmc">
   
 <!-- this is the stuff the user will see -->
 
