--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
 <div style="clear: both"></div>
 
 </div>
-<div id="wrapper">
+<div class="container">
 <h1>My Portfolio</h1>
 <p>Here is a portfolio of some of my designs. Enjoy.</p>
 
