--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
 <div id = "bg"> 
-<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1MmRNRThpWW9kRmc">
+<img class="background" src="https://drive.google.com/uc?id=0B6HcEl1I72V1MmRNRThpWW9kRmc">
   
 <!-- this is the stuff the user will see -->
 
