--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
   
 <!-- this is the stuff the user will see -->
 
-<div class="map_image">
+<div class="map_image" style="background-image: url('https://drive.google.com/uc?id=0B6HcEl1I72V1MmRNRThpWW9kRmc');">
 	<a class="map_link" id="map_link_0" title="My Resume" href="resume.html">Resume</a>
 	<a class="map_link" id="map_link_1" title="Contact Me" href="contact.html">Contact Me</a>
 	<a class="map_link" id="map_link_2" title="My Portfolio" href="portfolio.html">Portfolio</a>
 	<a class="map_link" id="map_link_3" title="My Articles" href="articles.html">Articles</a>
 </div>
-
-<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1MmRNRThpWW9kRmc">
 
 <h1>Hello, welcome to Andrew Grossman's personal website.</h1>
 
