--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@ body p {
 
 
 <div class="container">
-<h1>Andrew Grossman's Resume</h1>
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1UmhQZnVTbWp4RW8">
 
 <div>
 
