--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 	<a class="map_link" id="map_link_3" title="My Articles" href="articles.html">Articles</a>
 </div>
 
-<h1>Hello, welcome to Andrew Grossman's personal website.</h1>
+<h1 align="right">Hello, welcome to Andrew Grossman's personal website.</h1>
+
+<!-- <h1>Hello, welcome to Andrew Grossman's personal website.</h1> -->
 
 <!-- <a class="portfolio" href="portfolio.html" title="Go to My Portfolio">My Portfolio</a>
 <a class="resume" href="resume.html" title="Go to My Resume">My Resume</a>
