--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div id = "bg"> 
 
-<h1 align="right">Welcome to Andrew Grossman's personal website. Hover over the objects to learn more.</h1>
+<h1>Welcome to Andrew Grossman's personal website. Hover over the objects to learn more.</h1>
   
 <!-- this is the stuff the user will see -->
 
