--- a/articles.html
+++ b/articles.html
@@ -57,10 +57,10 @@
 <img src="--->
 alt="Trenton Times Articles" </a></p>
 
-<p>The Signal (TCNJ Student Run Newspaper):
+<p>The Signal (TCNJ Student Run Newspaper): </p>
 <a href="http://www.tcnjsignal.net/author/andrew-grossman/">
 <img src="--->
-alt="The Signal Articles" </a></p>
+alt="The Signal Articles" </a>
 
 <p>Carlisle Sentinel:
 <a href="http://cumberlink.com/sports/college/college-field-hockey-long-time-ship-u-coach-to-be/article_6d00e020-3e39-11e1-b372-0019bb2963f4.html">
