--- a/articles.html
+++ b/articles.html
@@ -47,7 +47,7 @@
 </div>
 <div class="container">
 <h1>My Articles</h1>
-<p>Here is a list of my published articles.</p>
+<!-- <p>Here is a list of my published articles.</p> -->
 
 
 <ul style="list-style-type:square"> 
