--- a/articles.html
+++ b/articles.html
@@ -58,7 +58,7 @@
 alt="The Signal Articles" width="500" height="150"> </a> </p> </li>
 
 
-<li> World TeamTennis Point of Interest: 
+<li> World TeamTennis Point of Contact: 
 <br>
 <a href="PDF">
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1WFlhRDQ5dmY5RjA"
