--- a/articles.html
+++ b/articles.html
@@ -51,7 +51,7 @@
 
 <aside>
 <ul style="list-style-type:square">
-<li>The Signal (The College of New Jersey Newspaper):
+<li>The Signal:
 <br>
 <a href="http://www.tcnjsignal.net/author/andrew-grossman/">
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1ZERNQ05jUlZXUzQ"
