--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <div class="map_image" style="background-image: url('https://drive.google.com/uc?id=0B6HcEl1I72V1MmRNRThpWW9kRmc');">
 	<a class="map_link" id="map_link_0" title="My Resume" href="resume.html">Resume</a>
 	<a class="map_link" id="map_link_1" title="Contact Me" href="contact.html">Contact Me</a>
-	<a class="map_link" id="map_link_2" title="My Portfolio" href="portfolio.html">Portfolio</a>
+	<a class="map_link" id="map_link_2" title="My Portfolio" href="portfolio2.html">Portfolio</a>
 	<a class="map_link" id="map_link_3" title="My Articles" href="articles.html">Articles</a>
 </div>
 
