--- a/portfolio2.html
+++ b/portfolio2.html
@@ -19,7 +19,7 @@
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 <![endif]-->
-<script src=".js/modernizr.custom.js"></script>
+<script src="./js/modernizr.custom.js"></script>
 </head>
 <body>
 <div id="webwidget_menu_glide" class="webwidget_menu_glide">
@@ -92,7 +92,7 @@
 <!-- jQuery & Bootstrap -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script src=".js/jquery.bookblock.js"></script>
+<script src="./js/jquery.bookblock.js"></script>
 <script>
 var Page = (function() {
 
