--- a/portfolio2.html
+++ b/portfolio2.html
@@ -8,7 +8,7 @@
 <meta name="author" content="grossma6@tcnj.edu">
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href=".styles/bookblock.css" />
+<link rel="stylesheet" type="text/css" href="./styles/bookblock.css" />
 <link rel="stylesheet" href="./styles/mystyle.css">
 <link href="./styles/webwidget_menu_glide.css" rel="stylesheet" type="text/css">
 
