--- a/portfolio2.html
+++ b/portfolio2.html
@@ -54,12 +54,12 @@
 
 <div id="bb-bookblock" class="bb-bookblock">
 <div class="bb-item">
-<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eGw5cUQycTMtUDg" alt="Photo One" title="Photo One">
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eGw5cUQycTMtUDg" width="500" height="750">
 <h1>Page 0</h1>
 </div>
 
 <div class="bb-item">
-<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1YVQxNHBVUEF0bkE" alt="Photo Two" title="Photo Two">
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1YVQxNHBVUEF0bkE" width="500" height="750">
 <h1>Page 1</h1>
 </div>
     
