--- a/portfolio2.html
+++ b/portfolio2.html
@@ -64,12 +64,12 @@
 </div>
     
 <div class="bb-item">
-<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA" alt="Photo Three" title="Photo Three">
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA" width="500" height="750">
 <h1>Page 2</h1>
 </div>
     
 <div class="bb-item">
-<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" alt="Photo Four" title="Photo Four">
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" width="500" height="750">
 <h1>Page 3</h1>
 </div>
 
