--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 <ul>
 <li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
 
-<li><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
+<li><a href="portfolio2.html" title="Back to My Portfolio">My Portfolio</a></li>
 
 <li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
 
