--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 <ul>
 <li><a href="index.html" title="Back to Main Menu">Main Menu</a></li>
 
-<li class="current"><a href="portfolio.html" title="Back to My Portfolio">My Portfolio</a></li>
+<li class="current"><a href="portfolio2.html" title="Back to My Portfolio">My Portfolio</a></li>
 
 <li><a href="articles.html" title="Back to My Articles">My Articles</a></li>
 
