--- a/portfolio2.html
+++ b/portfolio2.html
@@ -73,10 +73,10 @@
 <img src="https://drive.google.com/uc?id=0B6HcEl1I72V1M2dUaG5FMzQ1VXM" width="600" height="750">
 </div>
 
-<div class="bb-item">
-<!-- custom content -->
+<!-- <div class="bb-item">
+<!-- custom content 
 <h1>Page 5</h1>
-</div>
+</div> -->
 </div>
 
 </div>
