--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
-
-
+<script>
+$( "map_link_0" ).mouseover(function() {
+	$( "map_link_0" ).css( "border:2px solid #fff;" );
+});
+</script>
 
 </body>
 
