--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <script>
 $( "map_link_0" ).mouseover(function() {
-	$( "map_link_0" ).css( "border:2px solid #fff;" );
+	console.log("boo!");
 });
 </script>
 
