--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 
 <script>
-$( "map_link_0" ).mouseover(function() {
+$( "#map_link_0" ).mouseover(function() {
 	console.log("boo!");
 });
 </script>
