--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <script>
 $( "#map_link_0" ).mouseover(function() {
-	console.log("boo!");
+	$( "#map_link_0" ).css("border:2px solid #fff");
 });
 </script>
 
