--- a/index.html
+++ b/index.html
@@ -62,6 +62,24 @@ $( "#map_link_0" ).mouseover(function() {
 });
 </script>
 
+<script>
+$( "#map_link_1" ).mouseover(function() {
+	$( this ).css( "border", "1px solid #fff" );
+});
+</script>
+
+<script>
+$( "#map_link_2" ).mouseover(function() {
+	$( this ).css( "border", "1px solid #fff" );
+});
+</script>
+
+<script>
+$( "#map_link_3" ).mouseover(function() {
+	$( this ).css( "border", "1px solid #fff" );
+});
+</script>
+
 </body>
 
 
