--- a/portfolio3.html
+++ b/portfolio3.html
@@ -71,7 +71,7 @@
 <span class="wsl"><a href="http://wowslider.com">slideshow jquery</a> by WOWSlider.com v5.4</span>
 	<div class="ws_shadow"></div>
 	</div>
-	<script type="text/javascript" src="engine1/wowslider.js"></script>
+	<script type="text/javascript" src="./js/wowslider.js"></script>
 	<script type="text/javascript" src="engine1/script.js"></script>
 	<!-- End WOWSlider.com BODY section -->
 	
