--- a/portfolio3.html
+++ b/portfolio3.html
@@ -14,8 +14,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<!-- Start WOWSlider.com HEAD section -->
-	<link rel="stylesheet" type="text/css" href="engine1/style.css" />
-	<script type="text/javascript" src="engine1/jquery.js"></script>
+	<link rel="stylesheet" type="text/css" href="./styles/wowslider.css" />
 	<!-- End WOWSlider.com HEAD section -->
 </head>
 <body>
@@ -67,14 +66,14 @@
 <span class="wsl"><a href="http://wowslider.com">slideshow jquery</a> by WOWSlider.com v5.4</span>
 	<div class="ws_shadow"></div>
 	</div>
-	<script type="text/javascript" src="./js/wowslider.js"></script>
-	<script type="text/javascript" src="engine1/script.js"></script>
-	<!-- End WOWSlider.com BODY section -->
+		<!-- End WOWSlider.com BODY section -->
 	
 	
 	<script src="https://code.jquery.com/jquery.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <script src="./js/jquery.bookblock.js"></script>
+<script type="text/javascript" src="./js/wowslider.js"></script>
+	<script type="text/javascript" src="engine1/script.js"></script>
 <script>
 var Page = (function() {
 
