--- a/portfolio3.html
+++ b/portfolio3.html
@@ -50,11 +50,11 @@
 	<!-- Start WOWSlider.com BODY section -->
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
-<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA"><img src="data1/images/alien.jpg" width="500" height="625" id="wows1_0"/></a></li>
-<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1eGw5cUQycTMtUDg"><img src="data1/images/dad_design.jpg" width="500" height="625" id="wows1_1"/></a></li>
-<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA"><img src="data1/images/lights.jpg" width="500" height="625" id="wows1_2"/></a></li>
-<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1REZLTF9GdTFlSlE"><img src="data1/images/me.png" width="500" height="625" id="wows1_3"/></a></li>
-<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1M2dUaG5FMzQ1VXM"><img src="data1/images/tennis.png" width="500" height="625" id="wows1_4"/></a></li>
+<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA" id="wows1_0"/></a></li>
+<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1eGw5cUQycTMtUDg"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eGw5cUQycTMtUDg" id="wows1_1"/></a></li>
+<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" id="wows1_2"/></a></li>
+<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1REZLTF9GdTFlSlE"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1REZLTF9GdTFlSlE" id="wows1_3"/></a></li>
+<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1M2dUaG5FMzQ1VXM"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1M2dUaG5FMzQ1VXM" id="wows1_4"/></a></li>
 </ul></div>
 <div class="ws_bullets"><div>
 <a href="#" title=""><img src="data1/tooltips/alien.jpg" alt=""/>1</a>
