--- a/portfolio3.html
+++ b/portfolio3.html
@@ -8,7 +8,6 @@
 <meta name="author" content="grossma6@tcnj.edu">
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="./styles/bookblock.css" />
 <link rel="stylesheet" href="./styles/mystyle.css">
 <link href="./styles/webwidget_menu_glide.css" rel="stylesheet" type="text/css">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -71,9 +70,8 @@
 	
 	<script src="https://code.jquery.com/jquery.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script src="./js/jquery.bookblock.js"></script>
 <script type="text/javascript" src="./js/wowslider.js"></script>
-	<script type="text/javascript" src="engine1/script.js"></script>
+	<script type="text/javascript" src="./js/script.js"></script>
 <script>
 var Page = (function() {
 
