--- a/portfolio3.html
+++ b/portfolio3.html
@@ -56,11 +56,11 @@
 <li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1M2dUaG5FMzQ1VXM"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1M2dUaG5FMzQ1VXM" id="wows1_4"/></a></li>
 </ul></div>
 <div class="ws_bullets"><div>
-<a href="#" title=""><img src="data1/tooltips/alien.jpg" alt=""/>1</a>
-<a href="#" title=""><img src="data1/tooltips/dad_design.jpg" alt=""/>2</a>
-<a href="#" title=""><img src="data1/tooltips/lights.jpg" alt=""/>3</a>
-<a href="#" title=""><img src="data1/tooltips/me.png" alt=""/>4</a>
-<a href="#" title=""><img src="data1/tooltips/tennis.png" alt=""/>5</a>
+<a href="#" title=""><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eTd3eDlTY1RIODA" alt=""/>1</a>
+<a href="#" title=""><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1eGw5cUQycTMtUDg" alt=""/>2</a>
+<a href="#" title=""><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1b016Nlk3S2FNWTA" alt=""/>3</a>
+<a href="#" title=""><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1REZLTF9GdTFlSlE" alt=""/>4</a>
+<a href="#" title=""><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1M2dUaG5FMzQ1VXM" alt=""/>5</a>
 </div></div>
 <span class="wsl"><a href="http://wowslider.com">slideshow jquery</a> by WOWSlider.com v5.4</span>
 	<div class="ws_shadow"></div>
