--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 $( "#map_link_0" ).mouseover(function() {
 	$( this ).css( "border", "1px solid #fff" );
 });
+$( "#map_link_0" ).mouseleave(function() {
+	$( this ).css( "border", "0px" );
+});
 </script>
 
 <script>
