--- a/index.html
+++ b/index.html
@@ -68,18 +68,24 @@ $( "#map_link_0" ).mouseleave(function() {
 <script>
 $( "#map_link_1" ).mouseover(function() {
 	$( this ).css( "border", "1px solid #fff" );
+$( "#map_link_1" ).mouseleave(function() {
+	$( this ).css( "border", "0px" );
 });
 </script>
 
 <script>
 $( "#map_link_2" ).mouseover(function() {
 	$( this ).css( "border", "1px solid #fff" );
+$( "#map_link_2" ).mouseleave(function() {
+	$( this ).css( "border", "0px" );
 });
 </script>
 
 <script>
 $( "#map_link_3" ).mouseover(function() {
 	$( this ).css( "border", "1px solid #fff" );
+$( "#map_link_3" ).mouseleave(function() {
+	$( this ).css( "border", "0px" );
 });
 </script>
 
