--- a/wtt.html
+++ b/wtt.html
@@ -4,12 +4,11 @@
 <meta charset="utf-8">
 <title>My Portfolio</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="bookblock test">
+<meta name="description" content="WTT Articles">
 <meta name="author" content="grossma6@tcnj.edu">
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 <link rel="stylesheet" href="./styles/mystyle.css">
-<link href="./styles/webwidget_menu_glide.css" rel="stylesheet" type="text/css">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<!-- Start WOWSlider.com HEAD section -->
@@ -32,7 +31,7 @@
 <span class="wsl"><a href="http://wowslider.com">jquery slideshow</a> by WOWSlider.com v5.4</span>
 	<div class="ws_shadow"></div>
 	</div>
-	<script type="text/javascript" src="engine1/wowslider.js"></script>
-	<script type="text/javascript" src="engine1/script.js"></script>
+	<script type="text/javascript" src="./js/wowslider.js"></script>
+	<script type="text/javascript" src="./js/script.js"></script>
 	<!-- End WOWSlider.com BODY section -->
 </body>
