--- a/wtt.html
+++ b/wtt.html
@@ -31,6 +31,9 @@
 <span class="wsl"><a href="http://wowslider.com">jquery slideshow</a> by WOWSlider.com v5.4</span>
 	<div class="ws_shadow"></div>
 	</div>
+	
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./js/wowslider.js"></script>
 	<script type="text/javascript" src="./js/script.js"></script>
 	<!-- End WOWSlider.com BODY section -->
