--- a/wtt.html
+++ b/wtt.html
@@ -24,9 +24,9 @@
 <li><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1M05GU2ZXVEdMdG8" alt="Scott Hanover" title="Scott Hanover" id="wows1_2"/></li>
 </ul></div>
 <div class="ws_bullets"><div>
-<a href="#wows1_0" title="David Bell"><img src="data1/tooltips/david_bell_ps.jpg" alt="David Bell"/>1</a>
-<a href="#wows1_1" title="Elaine Wingfield"><img src="data1/tooltips/elaine_wingfield_ps.jpg" alt="Elaine Wingfield"/>2</a>
-<a href="#wows1_2" title="Scott Hanover"><img src="data1/tooltips/scott_hanover_ps.jpg" alt="Scott Hanover"/>3</a>
+<a href="#wows1_0" title="David Bell"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1bVVJT3BORUtsejA" alt="David Bell"/>1</a>
+<a href="#wows1_1" title="Elaine Wingfield"><img src="https://drive.google.com/uc?id= 0B6HcEl1I72V1Y1ZKcmUzMHZoVXc" alt="Elaine Wingfield"/>2</a>
+<a href="#wows1_2" title="Scott Hanover"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1M05GU2ZXVEdMdG8" alt="Scott Hanover"/>3</a>
 </div></div>
 <span class="wsl"><a href="http://wowslider.com">jquery slideshow</a> by WOWSlider.com v5.4</span>
 	<div class="ws_shadow"></div>
