--- a/wtt.html
+++ b/wtt.html
@@ -20,12 +20,12 @@
 	<div id="wowslider-container1">
 	<div class="ws_images"><ul>
 <li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1VFBjLVpiTEtwNlU"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1bVVJT3BORUtsejA" alt="David Bell" title="David Bell" id="wows1_0"/></a></li>
-<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1RmViRHBDOC1LdzQ"><img src="https://drive.google.com/uc?id= 0B6HcEl1I72V1Y1ZKcmUzMHZoVXc" alt="Elaine Wingfield" title="Elaine Wingfield" id="wows1_1"/></a></li>
+<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1RmViRHBDOC1LdzQ"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1Y1ZKcmUzMHZoVXc" alt="Elaine Wingfield" title="Elaine Wingfield" id="wows1_1"/></a></li>
 <li><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1M05GU2ZXVEdMdG8" alt="Scott Hanover" title="Scott Hanover" id="wows1_2"/></li>
 </ul></div>
 <div class="ws_bullets"><div>
 <a href="#wows1_0" title="David Bell"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1bVVJT3BORUtsejA" alt="David Bell"/>1</a>
-<a href="#wows1_1" title="Elaine Wingfield"><img src="https://drive.google.com/uc?id= 0B6HcEl1I72V1Y1ZKcmUzMHZoVXc" alt="Elaine Wingfield"/>2</a>
+<a href="#wows1_1" title="Elaine Wingfield"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1Y1ZKcmUzMHZoVXc" alt="Elaine Wingfield"/>2</a>
 <a href="#wows1_2" title="Scott Hanover"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1M05GU2ZXVEdMdG8" alt="Scott Hanover"/>3</a>
 </div></div>
 <span class="wsl"><a href="http://wowslider.com">jquery slideshow</a> by WOWSlider.com v5.4</span>
