--- a/wtt.html
+++ b/wtt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>My Portfolio</title>
+<title>World TeamTennis Articles</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="WTT Articles">
 <meta name="author" content="grossma6@tcnj.edu">
