--- a/wtt.html
+++ b/wtt.html
@@ -12,7 +12,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<!-- Start WOWSlider.com HEAD section -->
-	<link rel="stylesheet" type="text/css" href="./styles/wowslider.css" />
+	<link rel="stylesheet" type="text/css" href="./styles/wowslider.css">
 	<!-- End WOWSlider.com HEAD section -->
 </head>
 <body style="background-color:#003366">
