--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
 	<!-- Start WOWSlider.com HEAD section -->
 	<link rel="stylesheet" type="text/css" href="./styles/wowslider.css" />
 	<script type="text/javascript" src="./js/script.js"></script>
+	<script type="text/javascript" src="./js/script2.js"></script>
 	<!-- End WOWSlider.com HEAD section -->
 </head>
 <body style="background-color:#003366">
