--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@ body p {
 
 
 <div class="container">
-<h1>Andrew Grossman's Resume</h1>
+<!-- <h1>Andrew Grossman's Resume</h1>
 
 <div>
 
@@ -101,7 +101,7 @@ body p {
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-</div>
+</div> -->
 
 
 
