--- a/resume.html
+++ b/resume.html
@@ -53,6 +53,10 @@ body p {
 
 
 <div class="container">
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1NkwyODEzUTdDV2M">
+
+
+
 <!-- <h1>Andrew Grossman's Resume</h1>
 
 <div>
